--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -308,6 +308,9 @@
         }
       }
     }
+    .header-menu-wrapper{
+      padding-left: 12px;
+    }
   }
 }
 .main-menu {
